# agent-permission-analyzer

./: .gitignore  README.md  pyproject.toml
src/: analyzer.py  cli.py  models.py
tests/: test_analyzer.py  test_cli.py  test_models.py
